--- a/index.html
+++ b/index.html
@@ -10,22 +10,25 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Password Generator</h1>
+        <h1>PIN Generator</h1>
       </header>
       <div class="card">
         <div class="card-header">
-          <h2>Generate a Password</h2>
+          <h2>Generate a PIN</h2>
         </div>
         <div class="card-body">
           <textarea
             readonly
             id="password"
-            placeholder="Your Secure Password"
+            placeholder="Your Secure PIN"
             aria-label="Generated Password"
           ></textarea>
         </div>
         <div class="card-footer">
-          <button id="generate" class="btn">Generate Password</button>
+          <button id="generate" class="btn">Generate PIN</button>
+        </div>
+        <div class="card-header">
+            <p>Refresh page to generate new PIN<p>
         </div>
       </div>
     </div>
