final readme update

--- a/index.html
+++ b/index.html
@@ -35,4 +35,6 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 <!-- Temporarily Modifying HTML for submission -->
+<!-- Replaced Password Generator with PIN Generator -->
